2008-03-07  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Olivier Crete <tester at tester dot ca>

	* ext/speex/gstspeexenc.c: (gst_speex_enc_chain):
	Unref the buffers only once when handling not-negotiated errors.
	Fixes bug #520764.

2008-03-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Ole André Vadla Ravnås  <ole.andre.ravnas@tandberg.com>

	* gst/udp/gstudpsrc.c: (gst_udpsrc_finalize), (gst_udpsrc_start),
	(gst_udpsrc_stop):
	Properly balance WSA_Cleanup with WSA_Startup.
	Also make the poll controllable on windows. Fixes #520888.

2008-03-06  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/matroska/ebml-read.c: (gst_ebml_read_peek_bytes),
	(gst_ebml_read_pull_bytes), (gst_ebml_read_element_id),
	(gst_ebml_read_element_length), (gst_ebml_peek_id),
	(gst_ebml_read_skip), (gst_ebml_read_buffer),
	(gst_ebml_read_bytes), (gst_ebml_read_uint), (gst_ebml_read_sint),
	(gst_ebml_read_float), (gst_ebml_read_ascii), (gst_ebml_read_utf8),
	(gst_ebml_read_date), (gst_ebml_read_master),
	(gst_ebml_read_binary), (gst_ebml_read_header):
	* gst/matroska/ebml-read.h:
	* gst/matroska/matroska-demux.c:
	(gst_matroska_demux_combine_flows), (gst_matroska_demux_reset),
	(gst_matroska_demux_read_track_encodings),
	(gst_matroska_demux_add_stream),
	(gst_matroska_demux_handle_src_query),
	(gst_matroska_demux_handle_seek_event),
	(gst_matroska_demux_init_stream),
	(gst_matroska_demux_parse_tracks),
	(gst_matroska_demux_parse_index_cuetrack),
	(gst_matroska_demux_parse_index_pointentry),
	(gst_matroska_demux_parse_index), (gst_matroska_demux_parse_info),
	(gst_matroska_demux_parse_metadata_id_simple_tag),
	(gst_matroska_demux_parse_metadata_id_tag),
	(gst_matroska_demux_parse_metadata),
	(gst_matroska_demux_sync_streams),
	(gst_matroska_demux_push_hdr_buf),
	(gst_matroska_demux_push_flac_codec_priv_data),
	(gst_matroska_demux_push_xiph_codec_priv_data),
	(gst_matroska_demux_add_wvpk_header),
	(gst_matroska_demux_check_subtitle_buffer),