@@ -1,5 +1,15 @@
 2008-03-07  Sebastian Dröge  <slomo@circular-chaos.org>
 
+	* configure.ac:
+	* gst/audiofx/Makefile.am:
+	* gst/audiofx/audiochebband.c:
+	* gst/audiofx/audiocheblimit.c:
+	* gst/audiofx/math_compat.h:
+	Check for sinh(), cosh() and asinh() and define our own
+	implementations if they're not available. Fixes bug #520880.
+
+2008-03-07  Sebastian Dröge  <slomo@circular-chaos.org>
+
 	Patch by: Olivier Crete <tester at tester dot ca>
 
 	* ext/speex/gstspeexenc.c: (gst_speex_enc_chain):
